 cnp-mitre-postgresql-port-i65h8t2.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-mitre-postgresql-port-fw1vpgy
  namespace: default
spec:
  description: "This Policy will Protect PostgreSQL External Access from unknown IP's"
  endpointSelector:
    matchLabels:
      io.kompose.service: postgres
      pod-template-hash: 55f58945c
  ingress:
    - fromCIDRSet:
        - cidr: 0.0.0.0/0  # Change this to your CIDR set
      toPorts:
        - ports:
            - port: "5432"
              protocol: ANY
